# Projeto1_DA

./: Armazem.cpp  Armazem.h  CMakeLists.txt  DetalhesProjeto.md  Encomenda.cpp  Encomenda.h  Entrega.cpp  Entrega.h  Estafeta.cpp  Estafeta.h  FileHandler.cpp  FileHandler.h  Otimizacao.cpp  Otimizacao.h  Otimização.cpp  Otimização.h  Pedido.cpp  Pedido.h  ReadMe.md  main.cpp  maxHeap.h
codigo/: Armazem.h  Encomenda.h  Estafeta.h  Otimizacao.cpp  Otimizacao.h  main.cpp
data/: Class_Diagram_DA_T1.drawio
documentacao/: _armazem_8cpp.html  _armazem_8h.html  _armazem_8h_source.html  _encomenda_8cpp.html  _encomenda_8h.html  _encomenda_8h_source.html  _estafeta_8cpp.html  _estafeta_8h.html  _estafeta_8h_source.html  _file_handler_8cpp.html  _file_handler_8h.html  _file_handler_8h_source.html  _otimizacao_8cpp.html  _otimizacao_8h.html  _otimizacao_8h_source.html  annotated.html  class_armazem-members.html  class_armazem.html  class_encomenda.html  class_estafeta.html  class_expresso.html  class_file_handler.html  class_max_heap-members.html  class_max_heap.html  class_min_heap.html  class_normal-members.html  class_normal.html  class_otimizacao-members.html  class_otimizacao.html  classes.html  dir_4d7be947362df13686123d6563352e9b.html  files.html  functions.html  functions_func.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  jquery.js  (+8 more)
documentation/: Doxyfile  _armazem_8cpp.html  _armazem_8cpp__incl.dot  _armazem_8h.html  _armazem_8h__dep__incl.dot  _armazem_8h__incl.dot  _armazem_8h_source.html  _encomenda_8cpp.html  annotated.html  (+84 more)
(+58 files in other folders)
